CircleCI fix